# ChangeLog for net-libs/xulrunner
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/xulrunner/ChangeLog,v 1.120 2008/06/20 15:03:42 armin76 Exp $

  20 Jun 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9-r2.ebuild:
  Add check for pango and cairo to be built with X, bug #228451

  20 Jun 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9-r2.ebuild:
  Re-fix bug #228005

*xulrunner-1.9-r2 (20 Jun 2008)

  20 Jun 2008; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9-r1.ebuild,
  +xulrunner-1.9-r2.ebuild:
  Don't use external sqlite, since it seems to give some problems, bug
  #228305

*xulrunner-1.9-r1 (19 Jun 2008)

  19 Jun 2008; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9.ebuild,
  +xulrunner-1.9-r1.ebuild:
  Revision bump so users get the changes, see the changelog to see whats
  new

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.ebuild:
  Enable safe-browsing, bug #227983

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.ebuild:
  Fix dep on nss

  18 Jun 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9.ebuild:
  Bump patchset to fix bug #228005

*xulrunner-1.9 (17 Jun 2008)

  17 Jun 2008; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9_rc3.ebuild,
  +xulrunner-1.9.ebuild:
  Version bump, wrt #227853, remove old

*xulrunner-1.9_rc3 (12 Jun 2008)

  12 Jun 2008; Raúl Porcel <armin76@gentoo.org> -xulrunner-1.9_rc1.ebuild,
  -xulrunner-1.9_rc2.ebuild, +xulrunner-1.9_rc3.ebuild:
  Version bump, remove old

*xulrunner-1.9_rc2 (05 Jun 2008)

  05 Jun 2008; Raúl Porcel <armin76@gentoo.org> +xulrunner-1.9_rc2.ebuild:
  Version bump

  21 May 2008; Raúl Porcel <armin76@gentoo.org>
  -xulrunner-1.9_beta5-r1.ebuild:
  old

  20 May 2008; Raúl Porcel <armin76@gentoo.org>
  xulrunner-1.9_beta5-r1.ebuild, xulrunner-1.9_rc1.ebuild:
  Fix sqlite dep

  17 May 2008; Raúl Porcel <armin76@gentoo.org> xulrunner-1.9_rc1.ebuild:
  Raise nspr/nss dep
